force-app/main/default/objects/Contract/fields/Autorenewal_Clause__c.field-meta.xml
<CustomField>
    <fullName>Autorenewal_Clause__c</fullName>
    <label>Autorenewal Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>