force-app/main/default/objects/Contract/fields/Callback_Hours_Available__c.field-meta.xml
<CustomField>
    <fullName>Callback_Hours_Available__c</fullName>
    <label>Callback Hours Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>