force-app/main/default/objects/Contract/fields/Elevor_Company_Account__c.field-meta.xml
<CustomField>
    <fullName>Elevor_Company_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Elevor Company Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>